--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <div class="stage">
         <div class="card-3d" id="card">
-            <img src="sk.jpg" class="card-img" alt="Shoaib Khan">
+            <img src="https://github.com/shoaibkh1/web/blob/main/sk.jpg" class="card-img" alt="Shoaib Khan">
             <div class="info-box">
                 <h1>Shoaib<br>Khan</h1>
                 <div class="typewriter" id="typewriter"></div>
@@ -140,4 +140,5 @@
         });
     </script>
 </body>
+
 </html>
