--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link href="https://api.fontshare.com/v2/css?f[]=clash-display@200,400,600,700&f[]=general-sans@300,400,500,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        /* SHARED CSS */
+        /* PASTE CSS FROM SERVICES.HTML HERE, THEN ADD: */
         :root { --bg: #050505; --accent: #2997ff; --text: #ffffff; --surface: #111; --border: rgba(255, 255, 255, 0.1); }
         * { margin: 0; padding: 0; box-sizing: border-box; cursor: none; }
         body { background: var(--bg); color: var(--text); font-family: 'General Sans', sans-serif; padding: 50px 5% 150px 5%; min-height: 100vh; }
@@ -17,11 +17,17 @@
         h1 { font-family: 'Clash Display'; font-size: clamp(2.5rem, 5vw, 4rem); text-transform: uppercase; }
         .back-btn { border: 1px solid var(--border); padding: 10px 25px; border-radius: 50px; color: #888; text-decoration: none; transition: 0.3s; }
         .back-btn:hover { border-color: var(--accent); color: white; background: rgba(41, 151, 255, 0.1); }
-        footer { position: fixed; bottom: 0; left: 0; width: 100%; padding: 20px 50px; background: rgba(0,0,0,0.95); border-top: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center; z-index: 100; }
+        footer { position: fixed; bottom: 0; left: 0; width: 100%; padding: 15px 50px; background: rgba(0,0,0,0.95); border-top: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center; z-index: 400; }
         .socials { display: flex; gap: 20px; font-size: 1.2rem; }
-        .socials a { color: #888; transition: 0.3s; } .socials a:hover { color: var(--accent); }
+        .socials a { color: #888; transition: 0.3s; text-decoration: none; } .socials a:hover { color: var(--accent); }
         .book-btn { background: var(--accent); color: black; padding: 10px 25px; border-radius: 50px; font-weight: 700; text-decoration: none; transition: 0.3s; font-size: 0.9rem; }
         .book-btn:hover { background: white; box-shadow: 0 0 20px var(--accent); }
+        .nav-dock { position: fixed; bottom: 90px; left: 50%; transform: translateX(-50%); display: flex; gap: 8px; background: rgba(20,20,20,0.9); backdrop-filter: blur(15px); padding: 10px 15px; border-radius: 50px; border: 1px solid var(--border); z-index: 500; }
+        .nav-item { color: #aaa; text-decoration: none; padding: 10px 20px; border-radius: 30px; transition: 0.3s; font-weight: 500; font-size: 0.9rem; }
+        .nav-item:hover { color: white; background: rgba(255,255,255,0.1); }
+        .nav-item.active { background: white; color: black; font-weight: 700; }
+        .float-wa { position: fixed; right: 30px; bottom: 100px; width: 50px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; color: white; font-size: 24px; transition: 0.3s; z-index: 600; border: 1px solid rgba(255,255,255,0.1); background: #25D366; text-decoration: none; }
+        .float-wa:hover { transform: scale(1.1); }
 
         /* ABOUT SPECIFIC */
         .about-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 80px; max-width: 1400px; margin: 0 auto; }
@@ -35,11 +41,12 @@
         .role { font-size: 1.3rem; font-weight: 600; color: white; margin-bottom: 5px; }
         .company { color: #888; font-size: 0.9rem; text-transform: uppercase; letter-spacing: 1px; }
         .desc { font-size: 1rem; color: #666; margin-top: 10px; line-height: 1.5; }
-        @media(max-width: 768px) { .about-grid { grid-template-columns: 1fr; gap: 40px; } .timeline-row { grid-template-columns: 1fr; gap: 5px; } body { padding-bottom: 180px; } footer { flex-direction: column; gap: 15px; padding: 20px; text-align: center; } }
+        @media(max-width: 768px) { .about-grid { grid-template-columns: 1fr; gap: 40px; } .timeline-row { grid-template-columns: 1fr; gap: 5px; } body { padding-bottom: 180px; } footer { flex-direction: column; gap: 10px; padding: 15px; text-align: center; } .nav-dock { width: 95%; overflow-x: auto; bottom: 80px; } .float-wa { bottom: 150px; right: 20px; } }
     </style>
 </head>
 <body>
     <div class="cursor"></div><div class="cursor-f"></div>
+    <a href="https://wa.me/923105532979" class="float-wa hover-trig" target="_blank"><i class="fab fa-whatsapp"></i></a>
 
     <header>
         <h1>Profile</h1>
@@ -52,7 +59,6 @@
                 <div class="stat-num" data-target="6">0+</div>
                 <div class="stat-label">Years Experience</div>
             </div>
-
             <h2 style="font-family:'Clash Display'; font-size:2rem; margin-bottom:30px;">The Print Specialist</h2>
             <p>I am Shoaib Khan, a highly skilled Graphic Designer with over 6 years of experience in comprehensive print and digital media projects.</p>
             <p>My expertise extends internationally, with experience in both <strong>Peshawar, Pakistan</strong> and <strong>Ajman, UAE</strong>. Unlike designers who only work on screens, I manage the full project lifecycle, from initial consultation to supervising final production on the factory floor.</p>
@@ -61,35 +67,30 @@
 
         <div class="timeline">
             <h3 style="font-family:'Clash Display'; margin-bottom:30px; color:#888;">Experience</h3>
-            
             <div class="timeline-row hover-trig">
                 <div class="year">2024 - Now</div>
-                <div>
-                    <div class="role">Graphic Designer</div>
-                    <div class="company">Marks - Razmak Industries (Peshawar)</div>
-                    <p class="desc">Designing vehicle branding concepts for ambulance fabrication and customization. Supervising installation and managing promotional content.</p>
-                </div>
+                <div><div class="role">Graphic Designer</div><div class="company">Marks - Razmak Industries (Peshawar)</div><p class="desc">Designing vehicle branding concepts for ambulance fabrication and customization. Supervising installation and managing promotional content.</p></div>
             </div>
-
             <div class="timeline-row hover-trig">
                 <div class="year">2022 - 2023</div>
-                <div>
-                    <div class="role">Graphic Designer</div>
-                    <div class="company">Akma Packaging Industries LLC (UAE)</div>
-                    <p class="desc">Designed print-ready files for industrial packaging including PP woven bags and BOPP bags. Collaborated with production teams for functionality.</p>
-                </div>
+                <div><div class="role">Graphic Designer</div><div class="company">Akma Packaging Industries LLC (UAE)</div><p class="desc">Designed print-ready files for industrial packaging including PP woven bags and BOPP bags. Collaborated with production teams for functionality.</p></div>
             </div>
-
             <div class="timeline-row hover-trig">
                 <div class="year">2017 - 2021</div>
-                <div>
-                    <div class="role">Print Operations</div>
-                    <div class="company">Adalam Media Innovation</div>
-                    <p class="desc">Managed offset and digital printing processes for banners and stationery. Ensured files were optimized for seamless digital-to-print transition.</p>
-                </div>
+                <div><div class="role">Print Operations</div><div class="company">Adalam Media Innovation</div><p class="desc">Managed offset and digital printing processes for banners and stationery. Ensured files were optimized for seamless digital-to-print transition.</p></div>
             </div>
         </div>
     </div>
+
+    <nav class="nav-dock">
+        <a href="index.html" class="nav-item hover-trig">Home</a>
+        <a href="services.html" class="nav-item hover-trig">Services</a>
+        <a href="portfolio.html" class="nav-item hover-trig">Work</a>
+        <a href="process.html" class="nav-item hover-trig">Process</a>
+        <a href="about.html" class="nav-item active hover-trig">About</a>
+        <a href="https://share.google/UTxeuYakVupmYcUzj" target="_blank" class="nav-item hover-trig" style="color:var(--accent)">Reviews</a>
+        <a href="contact.html" class="nav-item hover-trig">Contact</a>
+    </nav>
 
     <footer>
         <div class="socials">
@@ -102,7 +103,6 @@
     </footer>
 
     <script>
-        // CURSOR
         const cursor = document.querySelector('.cursor'); const cursorF = document.querySelector('.cursor-f');
         window.addEventListener('mousemove', e => { 
             cursor.style.transform = `translate(${e.clientX}px, ${e.clientY}px) translate(-50%, -50%)`;
@@ -112,8 +112,7 @@
             el.addEventListener('mouseenter', () => { cursorF.style.transform += " scale(1.5)"; cursorF.style.background = "rgba(255,255,255,0.1)"; });
             el.addEventListener('mouseleave', () => { cursorF.style.transform = cursorF.style.transform.replace(" scale(1.5)", ""); cursorF.style.background = "transparent"; });
         });
-
-        // ANIMATED COUNTER
+        
         const counters = document.querySelectorAll('.stat-num');
         counters.forEach(counter => {
             const target = +counter.getAttribute('data-target');
@@ -121,13 +120,8 @@
             let count = 0;
             const updateCount = () => {
                 const inc = target / 100;
-                if(count < target) {
-                    count += inc;
-                    counter.innerText = Math.ceil(count) + suffix;
-                    setTimeout(updateCount, 30);
-                } else {
-                    counter.innerText = target + suffix;
-                }
+                if(count < target) { count += inc; counter.innerText = Math.ceil(count) + suffix; setTimeout(updateCount, 30); }
+                else { counter.innerText = target + suffix; }
             }
             updateCount();
         });
