--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
         h1 { margin: 0; font-family: 'Clash Display'; font-size: 3rem; line-height: 0.9; text-transform: uppercase; font-weight: 700; }
         .typewriter { color: var(--accent); font-weight: 600; text-transform: uppercase; letter-spacing: 2px; margin-top: 10px; font-size: 0.9rem; }
 
-        /* --- NAVIGATION DOCK (MOVED UP) --- */
+        /* --- NAV DOCK --- */
         .nav-dock { 
-            position: fixed; bottom: 90px; /* Moved above footer */
-            left: 50%; transform: translateX(-50%); 
+            position: fixed; bottom: 90px; left: 50%; transform: translateX(-50%); 
             display: flex; gap: 8px; background: rgba(20,20,20,0.9); backdrop-filter: blur(15px); 
             padding: 10px 15px; border-radius: 50px; border: 1px solid var(--border); z-index: 500; 
         }
@@ -68,29 +67,29 @@
             position: fixed; bottom: 0; left: 0; width: 100%; 
             padding: 15px 50px; background: rgba(0,0,0,0.95); 
             border-top: 1px solid var(--border); 
-            display: flex; justify-content: space-between; align-items: center; 
-            z-index: 400; 
+            display: flex; justify-content: space-between; align-items: center; z-index: 400; 
         }
         .socials { display: flex; gap: 20px; font-size: 1.2rem; }
-        .socials a { color: #888; transition: 0.3s; text-decoration: none; } 
-        .socials a:hover { color: var(--accent); }
-        
+        .socials a { color: #888; transition: 0.3s; text-decoration: none; } .socials a:hover { color: var(--accent); }
         .book-btn { background: var(--accent); color: black; padding: 10px 25px; border-radius: 50px; font-weight: 700; text-decoration: none; transition: 0.3s; font-size: 0.9rem; }
         .book-btn:hover { background: white; box-shadow: 0 0 20px var(--accent); }
 
         /* --- WHATSAPP FLOAT --- */
         .float-wa { 
-            position: fixed; right: 30px; bottom: 100px; /* Aligned with Menu height */
-            width: 50px; height: 50px; border-radius: 50%; 
-            display: flex; align-items: center; justify-content: center; 
+            position: fixed; right: 30px; bottom: 100px; width: 50px; height: 50px; 
+            border-radius: 50%; display: flex; align-items: center; justify-content: center; 
             color: white; font-size: 24px; transition: 0.3s; z-index: 600; 
-            border: 1px solid rgba(255,255,255,0.1); background: #25D366; 
-            text-decoration: none; /* Removed Underline */
+            border: 1px solid rgba(255,255,255,0.1); background: #25D366; text-decoration: none; 
         }
         .float-wa:hover { transform: scale(1.1); }
 
-        /* --- MOBILE --- */
+        /* --- MOBILE OPTIMIZATION --- */
         @media (max-width: 800px) {
+            body { 
+                height: auto; overflow-y: auto; display: block; 
+                padding-bottom: 250px; /* EXTRA PADDING FIX */
+            }
+            .stage { height: 80vh; margin-top: 50px; }
             .marquee-wrap { display: none; }
             .card-3d { width: 85%; height: auto; aspect-ratio: 3/4; transform: none !important; }
             .info-box { right: auto; bottom: -40px; width: 100%; text-align: center; }
@@ -103,7 +102,6 @@
 </head>
 <body>
     <div class="cursor"></div><div class="cursor-f"></div>
-
     <div class="marquee-wrap">
         <div class="marquee-text">
             <span>SHOAIB KHAN — GRAPHIC DESIGNER —&nbsp;</span>
@@ -137,7 +135,6 @@
         <div class="socials">
             <a href="https://pk.linkedin.com/in/shoaibkh1" target="_blank" class="hover-trig"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://behance.net/skgraphics4" target="_blank" class="hover-trig"><i class="fab fa-behance"></i></a>
-            <a href="https://www.facebook.com/shoaibkh.design/" target="_blank" class="hover-trig"><i class="fab fa-facebook-f"></i></a>
             <a href="https://share.google/UTxeuYakVupmYcUzj" target="_blank" class="hover-trig"><i class="fab fa-google"></i></a>
         </div>
         <div style="color:#666; font-size:0.8rem;">© 2025 Shoaib Khan.</div>
