--- a/process.html
+++ b/process.html
@@ -3,27 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Process | Shoaib Khan</title>
-    <link rel="icon" type="image/png" href="favicon.png">
     <link href="https://api.fontshare.com/v2/css?f[]=clash-display@200,400,600,700&f[]=general-sans@300,400,500,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        /* SHARED CSS */
+        /* PASTE CSS FROM PORTFOLIO.HTML, THEN ADD: */
         :root { --bg: #050505; --accent: #2997ff; --text: #ffffff; --surface: #111; --border: rgba(255, 255, 255, 0.1); }
         * { margin: 0; padding: 0; box-sizing: border-box; cursor: none; }
-        body { background: var(--bg); color: var(--text); font-family: 'General Sans', sans-serif; padding: 50px 5% 150px 5%; min-height: 100vh; }
+        body { background: var(--bg); color: var(--text); font-family: 'General Sans', sans-serif; padding: 50px 5% 300px 5%; min-height: 100vh; }
+        
         .cursor { position: fixed; top:0; left:0; width: 10px; height: 10px; background: white; border-radius: 50%; pointer-events: none; z-index: 10000; transform: translate(-50%, -50%); mix-blend-mode: difference; }
         .cursor-f { position: fixed; top:0; left:0; width: 40px; height: 40px; border: 1px solid var(--accent); border-radius: 50%; pointer-events: none; z-index: 9999; transform: translate(-50%, -50%); transition: 0.15s; }
         header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 60px; }
         h1 { font-family: 'Clash Display'; font-size: clamp(2.5rem, 5vw, 4rem); text-transform: uppercase; }
         .back-btn { border: 1px solid var(--border); padding: 10px 25px; border-radius: 50px; color: #888; text-decoration: none; transition: 0.3s; }
         .back-btn:hover { border-color: var(--accent); color: white; background: rgba(41, 151, 255, 0.1); }
-        footer { position: fixed; bottom: 0; left: 0; width: 100%; padding: 20px 50px; background: rgba(0,0,0,0.95); border-top: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center; z-index: 100; }
+        footer { position: fixed; bottom: 0; left: 0; width: 100%; padding: 15px 50px; background: rgba(0,0,0,0.95); border-top: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center; z-index: 400; }
         .socials { display: flex; gap: 20px; font-size: 1.2rem; }
-        .socials a { color: #888; transition: 0.3s; } .socials a:hover { color: var(--accent); }
+        .socials a { color: #888; transition: 0.3s; text-decoration: none; } .socials a:hover { color: var(--accent); }
         .book-btn { background: var(--accent); color: black; padding: 10px 25px; border-radius: 50px; font-weight: 700; text-decoration: none; transition: 0.3s; font-size: 0.9rem; }
         .book-btn:hover { background: white; box-shadow: 0 0 20px var(--accent); }
+        .nav-dock { position: fixed; bottom: 90px; left: 50%; transform: translateX(-50%); display: flex; gap: 8px; background: rgba(20,20,20,0.9); backdrop-filter: blur(15px); padding: 10px 15px; border-radius: 50px; border: 1px solid var(--border); z-index: 500; }
+        .nav-item { color: #aaa; text-decoration: none; padding: 10px 20px; border-radius: 30px; transition: 0.3s; font-weight: 500; font-size: 0.9rem; }
+        .nav-item:hover { color: white; background: rgba(255,255,255,0.1); }
+        .nav-item.active { background: white; color: black; font-weight: 700; }
+        .float-wa { position: fixed; right: 30px; bottom: 100px; width: 50px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; color: white; font-size: 24px; transition: 0.3s; z-index: 600; border: 1px solid rgba(255,255,255,0.1); background: #25D366; text-decoration: none; }
+        .float-wa:hover { transform: scale(1.1); }
 
-        /* PROCESS SPECIFIC */
         .steps { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 40px; }
         .step-card { background: rgba(255,255,255,0.03); padding: 40px; border-radius: 20px; border: 1px solid var(--border); position: relative; transition: 0.3s; }
         .step-card:hover { transform: translateY(-10px); border-color: var(--accent); background: rgba(41, 151, 255, 0.05); }
@@ -31,11 +36,12 @@
         h3 { font-family: 'Clash Display'; font-size: 1.5rem; margin-bottom: 15px; }
         p { color: #888; line-height: 1.6; }
         
-        @media(max-width: 768px) { body { padding-bottom: 180px; } footer { flex-direction: column; gap: 15px; padding: 20px; text-align: center; } .steps { grid-template-columns: 1fr; } }
+        @media(max-width: 768px) { body { padding-bottom: 250px; } footer { flex-direction: column; gap: 10px; padding: 15px; text-align: center; } .steps { grid-template-columns: 1fr; } .nav-dock { width: 95%; overflow-x: auto; bottom: 80px; } .float-wa { bottom: 150px; right: 20px; } }
     </style>
 </head>
 <body>
     <div class="cursor"></div><div class="cursor-f"></div>
+    <a href="https://wa.me/923105532979" class="float-wa hover-trig" target="_blank"><i class="fab fa-whatsapp"></i></a>
 
     <header>
         <h1>Workflow</h1>
@@ -46,7 +52,7 @@
         <div class="step-card hover-trig">
             <span class="num">01</span>
             <h3>Discovery</h3>
-            <p>We discuss your brand goals, target audience, and technical specs (size, material, format).</p>
+            <p>We discuss your brand goals, target audience, and technical specs.</p>
         </div>
         <div class="step-card hover-trig">
             <span class="num">02</span>
@@ -64,6 +70,16 @@
             <p>Final files (AI, PDF, EPS, PNG) ready for print production or digital launch.</p>
         </div>
     </div>
+
+    <nav class="nav-dock">
+        <a href="index.html" class="nav-item hover-trig">Home</a>
+        <a href="services.html" class="nav-item hover-trig">Services</a>
+        <a href="portfolio.html" class="nav-item hover-trig">Work</a>
+        <a href="process.html" class="nav-item active hover-trig">Process</a>
+        <a href="about.html" class="nav-item hover-trig">About</a>
+        <a href="https://share.google/UTxeuYakVupmYcUzj" target="_blank" class="nav-item hover-trig" style="color:var(--accent)">Reviews</a>
+        <a href="contact.html" class="nav-item hover-trig">Contact</a>
+    </nav>
 
     <footer>
         <div class="socials">
