--- a/process.html
+++ b/process.html
@@ -2,29 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Process | Shoaib Khan</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link href="https://api.fontshare.com/v2/css?f[]=clash-display@200,400,600,700&f[]=general-sans@300,400,500,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        /* PASTE CSS FROM PORTFOLIO.HTML HERE */
+        /* CORE CSS */
         :root { --bg: #050505; --accent: #2997ff; --text: #ffffff; --surface: #111; --border: rgba(255, 255, 255, 0.1); }
         * { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-        body { background: var(--bg); color: var(--text); font-family: 'General Sans', sans-serif; padding: 50px 5% 300px 5%; min-height: 100vh; }
-        /* [Include all shared CSS from Portfolio here: Cursor, Nav, Footer, etc.] */
-        .cursor { position: fixed; top:0; left:0; width: 10px; height: 10px; background: white; border-radius: 50%; pointer-events: none; z-index: 10000; transform: translate(-50%, -50%); mix-blend-mode: difference; }
-        .cursor-f { position: fixed; top:0; left:0; width: 40px; height: 40px; border: 1px solid var(--accent); border-radius: 50%; pointer-events: none; z-index: 9999; transform: translate(-50%, -50%); transition: 0.15s; }
-        @media (hover: none) { .cursor, .cursor-f { display: none; } }
-        header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 60px; }
-        h1 { font-family: 'Clash Display'; font-size: clamp(2.5rem, 5vw, 4rem); text-transform: uppercase; }
-        .back-btn { border: 1px solid var(--border); padding: 10px 25px; border-radius: 50px; color: #888; text-decoration: none; transition: 0.3s; font-size: 0.9rem; }
         
-        .steps { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 40px; }
+        body { 
+            background: var(--bg); color: var(--text); font-family: 'General Sans', sans-serif; 
+            padding: 50px 5% 300px 5%; /* Big Padding for Mobile */
+            min-height: 100vh; overflow-x: hidden;
+        }
+
+        /* CURSOR */
+        @media (hover: hover) and (pointer: fine) {
+            body { cursor: none; }
+            .cursor { position: fixed; top:0; left:0; width: 10px; height: 10px; background: white; border-radius: 50%; pointer-events: none; z-index: 10000; transform: translate(-50%, -50%); mix-blend-mode: difference; }
+            .cursor-f { position: fixed; top:0; left:0; width: 40px; height: 40px; border: 1px solid var(--accent); border-radius: 50%; pointer-events: none; z-index: 9999; transform: translate(-50%, -50%); transition: 0.15s; }
+        }
+        @media (hover: none) { .cursor, .cursor-f { display: none; } }
+
+        /* HEADER */
+        header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 60px; }
+        h1 { font-family: 'Clash Display'; font-size: clamp(2.5rem, 5vw, 4rem); text-transform: uppercase; margin: 0; }
+        .back-btn { border: 1px solid var(--border); padding: 10px 25px; border-radius: 50px; color: #888; text-decoration: none; transition: 0.3s; font-size: 0.9rem; }
+
+        /* STEPS GRID */
+        .steps { 
+            display: grid; 
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
+            gap: 40px; 
+        }
         .step-card { background: rgba(255,255,255,0.03); padding: 40px; border-radius: 20px; border: 1px solid var(--border); position: relative; transition: 0.3s; }
         .num { font-size: 4rem; font-weight: 800; color: rgba(255,255,255,0.05); position: absolute; top: 20px; right: 20px; }
         h3 { font-family: 'Clash Display'; font-size: 1.5rem; margin-bottom: 15px; }
         p { color: #888; line-height: 1.6; }
 
+        /* FOOTER & NAV */
         .nav-dock { position: fixed; bottom: 90px; left: 50%; transform: translateX(-50%); display: flex; gap: 8px; background: rgba(20,20,20,0.9); backdrop-filter: blur(15px); padding: 10px 15px; border-radius: 50px; border: 1px solid var(--border); z-index: 500; }
         .nav-item { color: #aaa; text-decoration: none; padding: 10px 20px; border-radius: 30px; transition: 0.3s; font-weight: 500; font-size: 0.9rem; white-space: nowrap; }
         .nav-item.active { background: white; color: black; font-weight: 700; }
@@ -32,14 +50,15 @@
         footer { position: fixed; bottom: 0; left: 0; width: 100%; padding: 15px 50px; background: rgba(0,0,0,0.95); border-top: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center; z-index: 400; }
         .socials { display: flex; gap: 20px; font-size: 1.2rem; }
         .socials a { color: #888; transition: 0.3s; text-decoration: none; }
-        .book-btn { background: var(--accent); color: black; padding: 10px 25px; border-radius: 50px; font-weight: 700; text-decoration: none; font-size: 0.9rem; }
+        .book-btn { background: var(--accent); color: black; padding: 10px 25px; border-radius: 50px; font-weight: 700; text-decoration: none; transition: 0.3s; font-size: 0.9rem; }
+        
         .float-wa { position: fixed; right: 30px; bottom: 100px; width: 50px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; color: white; font-size: 24px; z-index: 600; border: 1px solid rgba(255,255,255,0.1); background: #25D366; text-decoration: none; }
 
+        /* --- MOBILE FORCE --- */
         @media(max-width: 900px) {
-            body { padding-bottom: 300px; }
+            .steps { grid-template-columns: 1fr; } /* Force 1 column */
+            .nav-dock { width: 95%; justify-content: flex-start; overflow-x: auto; bottom: 80px; }
             footer { flex-direction: column; gap: 10px; padding: 15px; text-align: center; }
-            .steps { grid-template-columns: 1fr; }
-            .nav-dock { width: 95%; overflow-x: auto; bottom: 80px; }
             .float-wa { bottom: 150px; right: 20px; }
         }
     </style>
@@ -57,7 +76,7 @@
         <div class="step-card">
             <span class="num">01</span>
             <h3>Discovery</h3>
-            <p>We discuss your brand goals, target audience, and technical specs.</p>
+            <p>We discuss your brand goals, target audience, and technical specs (size, material, format).</p>
         </div>
         <div class="step-card">
             <span class="num">02</span>
